publish add Richter City to 09 Nov highlights

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ In 2018, (WFTDA-gender) Team Queensland won, with a strong (222:125) victory ove
                             <a class="tag" href="categories/irish-roller-derby/"><span>irish roller derby</span></a>
                             <a class="tag" href="categories/italian-roller-derby/"><span>italian roller derby</span></a>
                             <a class="tag" href="categories/national-tournament/"><span>national tournament</span></a>
+                            <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
                             <a class="tag" href="categories/portuguese-roller-derby/"><span>portuguese roller derby</span></a>
                             <a class="tag" href="categories/scottish-roller-derby/"><span>scottish roller derby</span></a>
                             <a class="tag" href="categories/short-track-roller-derby/"><span>short track roller derby</span></a>
