gdansk added to 23 Nov highlights

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <a class="tag" href="categories/national-tournament/"><span>national tournament</span></a>
                             <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
                             <a class="tag" href="categories/norwegian-roller-derby/"><span>norwegian roller derby</span></a>
+                            <a class="tag" href="categories/polish-roller-derby/"><span>polish roller derby</span></a>
                             <a class="tag" href="categories/refereeing-clinic/"><span>refereeing clinic</span></a>
                             <a class="tag" href="categories/roller-derby-sevens/"><span>roller derby sevens</span></a>
                             <a class="tag" href="categories/spanish-roller-derby/"><span>spanish roller derby</span></a>
