add UAE to 23 Nov highlights

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                             <a class="tag" href="categories/belgian-roller-derby/"><span>belgian roller derby</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
                             <a class="tag" href="categories/danish-roller-derby/"><span>danish roller derby</span></a>
+                            <a class="tag" href="categories/emirates-roller-derby/"><span>emirates roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
                             <a class="tag" href="categories/italian-roller-derby/"><span>italian roller derby</span></a>
