add Dark Side + Oil City to 24 Nov

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                             <a class="tag" href="categories/argentine-roller-derby/"><span>argentine roller derby</span></a>
                             <a class="tag" href="categories/australian-roller-derby/"><span>australian roller derby</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
+                            <a class="tag" href="categories/costa-rican-roller-derby/"><span>costa rican roller derby</span></a>
                             <a class="tag" href="categories/dutch-roller-derby/"><span>dutch roller derby</span></a>
+                            <a class="tag" href="categories/norwegian-roller-derby/"><span>norwegian roller derby</span></a>
                             <a class="tag" href="categories/south-african-roller-derby/"><span>south african roller derby</span></a>
                             <a class="tag" href="categories/sunday-addendum/"><span>sunday addendum</span></a>
                             <a class="tag" href="categories/swiss-roller-derby/"><span>swiss roller derby</span></a>
