add Malmö to 30 Nov

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ get themselves an actual webpage [we can help host one if you need help]).</p>
                             <a class="tag" href="categories/national-tournament/"><span>national tournament</span></a>
                             <a class="tag" href="categories/scottish-roller-derby/"><span>scottish roller derby</span></a>
                             <a class="tag" href="categories/spanish-roller-derby/"><span>spanish roller derby</span></a>
+                            <a class="tag" href="categories/swedish-roller-derby/"><span>swedish roller derby</span></a>
                             <a class="tag" href="categories/swiss-roller-derby/"><span>swiss roller derby</span></a>
                             <a class="tag" href="categories/weekend-highlights/"><span>weekend highlights</span></a>
                 </span>
