add Prague to highlights

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                             <a class="tag" href="categories/bootcamps/"><span>bootcamps</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
                             <a class="tag" href="categories/chilean-roller-derby/"><span>chilean roller derby</span></a>
+                            <a class="tag" href="categories/czech-roller-derby/"><span>czech roller derby</span></a>
                             <a class="tag" href="categories/finnish-roller-derby/"><span>finnish roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
