minor fixes - merge identical people in votes, add some event updates for highlights

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ get themselves an actual webpage [we can help host one if you need help]).</p>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/icelandic-roller-derby/"><span>icelandic roller derby</span></a>
+                            <a class="tag" href="categories/japanese-roller-derby/"><span>japanese roller derby</span></a>
                             <a class="tag" href="categories/korean-roller-derby/"><span>korean roller derby</span></a>
                             <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
                             <a class="tag" href="categories/open-scrimmage/"><span>open scrimmage</span></a>
