add UAE to EoY highlights

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
                             <a class="tag" href="categories/bootcamp/"><span>bootcamp</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
                             <a class="tag" href="categories/dutch-roller-derby/"><span>dutch roller derby</span></a>
+                            <a class="tag" href="categories/emirati-roller-derby/"><span>emirati roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/icelandic-roller-derby/"><span>icelandic roller derby</span></a>
                             <a class="tag" href="categories/open-scrimmage/"><span>open scrimmage</span></a>
                             <a class="tag" href="categories/short-track-roller-derby/"><span>short track roller derby</span></a>
                             <a class="tag" href="categories/spanish-roller-derby/"><span>spanish roller derby</span></a>
                             <a class="tag" href="categories/swedish-roller-derby/"><span>swedish roller derby</span></a>
+                            <a class="tag" href="categories/uae-roller-derby/"><span>uae roller derby</span></a>
                             <a class="tag" href="categories/weekend-highlights/"><span>weekend highlights</span></a>
                 </span>
             </div>
