--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                             <a class="tag" href="categories/belgian-roller-derby/"><span>belgian roller derby</span></a>
                             <a class="tag" href="categories/bootcamp/"><span>bootcamp</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
+                            <a class="tag" href="categories/chilean-roller-derbyy/"><span>chilean roller derbyy</span></a>
                             <a class="tag" href="categories/dutch-roller-derby/"><span>dutch roller derby</span></a>
-                            <a class="tag" href="categories/emirati-roller-derby/"><span>emirati roller derby</span></a>
+                            <a class="tag" href="categories/emirati-roller-derb/"><span>emirati roller derb</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/icelandic-roller-derby/"><span>icelandic roller derby</span></a>
                             <a class="tag" href="categories/open-scrimmage/"><span>open scrimmage</span></a>
