--- a/index-101.html
+++ b/index-101.html
@@ -11,7 +11,7 @@
 <link rel="alternate" type="application/rss+xml" title="RSS (it)" href="it/rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (fur)" href="fur/rss.xml">
 <link rel="canonical" href="https://www.scottishrollerderbyblog.com/index-101.html">
-<link rel="prev" href="." type="text/html">
+<link rel="prev" href="index-102.html" type="text/html">
 <link rel="next" href="index-100.html" type="text/html">
 <!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]-->
 </head>
@@ -453,7 +453,7 @@ get themselves an actual webpage [we can help host one if you need help]).</p>
     
         <nav class="postindexpager"><ul class="pager">
 <li class="previous">
-                <a href="." rel="prev">Newer posts</a>
+                <a href="index-102.html" rel="prev">Newer posts</a>
             </li>
             <li class="next">
                 <a href="index-100.html" rel="next">Older posts</a>
