--- a/index.html
+++ b/index.html
@@ -761,7 +761,8 @@ Their announcement was made via the MyRollerDerby Facebook account, here:</p>
 <a href="https://aoanla.pythonanywhere.com/WorldDerbyMap/index.html">World Roller Derby Map</a>
 
             </li>
-<li>
+                <li><a rel="me" href="https://hachyderm.io/@aoanla">Mastodon</a></li>
+                <li>
             
             
             </ul>
